--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -9,6 +9,7 @@ jobs:
     strategy:
       matrix:
         os: [windows-2019]
+        # os: [windows-2019]
 
     steps:
       - uses: actions/checkout@v2
