Generating wheels for windows

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["setuptools", "wheel", "oldest-supported-numpy", "cython>=0.23", "scikit-learn"]
+requires = ["setuptools", "wheel", "oldest-supported-numpy", "Cython>=0.23", "scikit-learn"]
 build-backend = "setuptools.build_meta"
 
 [tool.cibuildwheel]
