--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,11 @@
 [build-system]
-requires = ["setuptools", "wheel", "oldest-supported-numpy", "Cython>=0.23", "scikit-learn"]
+# requires = ["setuptools", "wheel", "oldest-supported-numpy", "Cython>=0.23", "scikit-learn"]
+requires = ["setuptools", "wheel", "oldest-supported-numpy", "Cython==0.29.23", "scikit-learn"]
 build-backend = "setuptools.build_meta"
 
 [tool.cibuildwheel]
 # Only build on CPython 3.6
-#build = "cp39-*"
+build = "cp39-*"
 skip = ["cp36-musllinux*", "cp37-musllinux*", "cp38-musllinux*", "cp39-musllinux*", "cp310-musllinux*", "pp*", "cp310-*"]
 
 # Build `universal2` and `arm64` wheels on an Intel runner.
