--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -8,7 +8,8 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [windows-2019]
+        os: [macos-latest]
+        # os: [macos-latest, ubuntu-latest, windows-latest]
         # os: [windows-2019]
 
     steps:
