--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [build-system]
-# requires = ["setuptools", "wheel", "oldest-supported-numpy", "Cython>=0.23", "scikit-learn"]
-requires = ["setuptools", "wheel", "oldest-supported-numpy", "Cython==0.29.23", "scikit-learn"]
+requires = ["setuptools", "wheel", "oldest-supported-numpy", "Cython>=0.23", "scikit-learn"]
+# requires = ["setuptools", "wheel", "oldest-supported-numpy", "Cython==0.29.23", "scikit-learn"]
 build-backend = "setuptools.build_meta"
 
 [tool.cibuildwheel]
